--- a/ArkMaster/app/src/main/res/layout/activity_my_page.xml
+++ b/ArkMaster/app/src/main/res/layout/activity_my_page.xml
@@ -35,10 +35,10 @@
 
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/main_char_img"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="70dp"
+        android:layout_width="130dp"
+        android:layout_height="130dp"
+        android:layout_marginStart="28dp"
+        android:layout_marginTop="46dp"
         android:background="#AFAFAF"
         android:src="@drawable/common"
         app:layout_constraintStart_toStartOf="parent"
@@ -49,13 +49,12 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
         android:text="@string/user_name"
-        android:textSize="16sp"
+        android:textColor="@color/black"
+        android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/textView2"
-        app:layout_constraintEnd_toStartOf="@+id/tv_user_name"
         app:layout_constraintStart_toEndOf="@+id/main_char_img"
         app:layout_constraintTop_toTopOf="@+id/main_char_img" />
 
@@ -63,13 +62,12 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
         android:text="@string/user_email"
-        android:textSize="16sp"
+        android:textColor="@color/black"
+        android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/main_char_img"
-        app:layout_constraintEnd_toStartOf="@+id/tv_user_email"
         app:layout_constraintStart_toEndOf="@+id/main_char_img"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
@@ -80,9 +78,11 @@
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:text="이름"
+        android:textColor="@color/dark_gray"
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="@+id/textView"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/my_page_button"
+        app:layout_constraintStart_toEndOf="@+id/textView"
         app:layout_constraintTop_toTopOf="@+id/textView" />
 
     <TextView
@@ -92,9 +92,11 @@
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:text="이메일"
+        android:textColor="@color/dark_gray"
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="@+id/textView2"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/my_page_button"
+        app:layout_constraintStart_toEndOf="@+id/textView2"
         app:layout_constraintTop_toTopOf="@+id/textView2" />
 
     <TextView
