--- a/ArkMaster/app/src/main/res/layout/activity_main.xml
+++ b/ArkMaster/app/src/main/res/layout/activity_main.xml
@@ -41,6 +41,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
+        android:layout_marginBottom="4dp"
         android:background="@drawable/btn_pressed_selector"
         android:text="@string/button_home"
         app:layout_constraintBottom_toBottomOf="parent"
