--- a/ArkMaster/app/src/main/res/layout/set_main_character_popup_layout.xml
+++ b/ArkMaster/app/src/main/res/layout/set_main_character_popup_layout.xml
@@ -14,6 +14,7 @@
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="32dp"
         android:background="@drawable/check_layout_size"
+        android:overScrollMode="never"
         android:paddingStart="10dp"
         android:paddingEnd="10dp"
         android:spinnerMode="dropdown"
