--- a/ArkMaster/app/src/main/res/layout/activity_sign_in.xml
+++ b/ArkMaster/app/src/main/res/layout/activity_sign_in.xml
@@ -95,6 +95,7 @@
             android:layout_marginTop="15dp"
             android:background="@drawable/signin_textbox"
             android:hint="@string/signup_passwordHint"
+            android:inputType="textPassword"
             app:layout_constraintStart_toStartOf="@+id/textView7"
             app:layout_constraintTop_toBottomOf="@+id/textView7" />
 
