--- a/ArkMaster/app/src/main/res/layout/activity_detail.xml
+++ b/ArkMaster/app/src/main/res/layout/activity_detail.xml
@@ -4,6 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:focusable="true"
+    android:focusableInTouchMode="true"
     tools:context=".DetailActivity">
 
     <ScrollView
@@ -33,6 +35,7 @@
                     android:background="#353535"
                     android:padding="10dp"
                     android:src="@drawable/hawkeye"
+                    android:transitionName="transImage"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:shapeAppearanceOverlay="@style/RoundOverlay" />
@@ -50,6 +53,7 @@
                         android:text="호크아이"
                         android:textSize="24sp"
                         android:textStyle="bold"
+                        android:transitionName="transName"
                         app:layout_constraintBottom_toBottomOf="@+id/img_hawk"
                         app:layout_constraintStart_toEndOf="@+id/img_hawk"
                         app:layout_constraintTop_toTopOf="@+id/img_hawk" />
