--- a/ArkMaster/app/src/main/res/drawable/signin_textbox.xml
+++ b/ArkMaster/app/src/main/res/drawable/signin_textbox.xml
@@ -2,10 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="#00FFFFFF"/>
-    <size
-        android:width="200dp"
-        android:height="50dp" />
-    <stroke
-        android:width="2dp"/>
+    <solid android:color="#00FFFFFF" />
+    <stroke android:width="1dp" />
+    <corners android:radius="10dp" />
 </shape>
