--- a/ArkMaster/app/src/main/res/drawable/textbox.xml
+++ b/ArkMaster/app/src/main/res/drawable/textbox.xml
@@ -2,11 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="#FFFFFF"/>
+    <solid android:color="#00FFFFFF"/>
     <corners android:radius="10dp"/>
-    <size
-        android:width="200dp"
-        android:height="50dp" />
     <stroke
-        android:width="2dp"/>
+        android:width="1dp"/>
 </shape>
