--- a/ArkMaster/app/src/main/res/layout/activity_sign_in.xml
+++ b/ArkMaster/app/src/main/res/layout/activity_sign_in.xml
@@ -4,33 +4,28 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="10dp"
+    android:layout_margin="10dp"
     tools:context=".SignInActivity">
-
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/signin_toptap"
-        android:layout_width="409dp"
-        android:layout_height="77dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:background="@color/purple"
-        android:foregroundGravity="center"
+        android:padding="10dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.48"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="@string/signin_topText"
-            android:textSize="52sp"
             android:fontFamily="@font/changwondangam"
-            android:gravity="center"/>
-
-
+            android:gravity="center"
+            android:text="@string/signin_topText"
+            android:textSize="50sp" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/signin_loginbox"
@@ -46,11 +41,11 @@
             android:id="@+id/textView12"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginStart="16sp"
+            android:layout_marginTop="16sp"
             android:fontFamily="@font/mbc"
             android:text="@string/signin_email"
-            android:textSize="25sp"
+            android:textSize="20sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView9" />
 
@@ -58,44 +53,38 @@
             android:id="@+id/textView7"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="90dp"
+            android:layout_marginStart="16sp"
+            android:layout_marginTop="16sp"
             android:fontFamily="@font/mbc"
             android:text="@string/signup_password"
-            android:textSize="25sp"
+            android:textSize="20sp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView12" />
+            app:layout_constraintTop_toBottomOf="@+id/signin_etid" />
 
         <EditText
             android:id="@+id/signin_etid"
-            android:layout_width="207dp"
+            android:layout_width="match_parent"
             android:layout_height="46dp"
-            android:layout_marginTop="15dp"
+            android:layout_marginStart="16sp"
+            android:layout_marginTop="16sp"
+            android:layout_marginEnd="16sp"
             android:background="@drawable/signin_textbox"
             android:hint="@string/signup_emailHint"
+            android:padding="10dp"
             app:layout_constraintStart_toStartOf="@+id/textView12"
             app:layout_constraintTop_toBottomOf="@+id/textView12" />
 
         <EditText
-            android:id="@+id/signin_etspinner"
-            android:layout_width="150dp"
-            android:layout_height="wrap_content"
-            android:hint=""
-            app:layout_constraintBottom_toBottomOf="@+id/signin_etid"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toEndOf="@+id/signin_etid"
-            app:layout_constraintTop_toTopOf="@+id/signin_etid"
-            app:layout_constraintVertical_bias="1.0" />
-
-        <EditText
             android:id="@+id/signin_etpw"
-            android:layout_width="300dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
+            android:layout_marginStart="16sp"
+            android:layout_marginTop="16sp"
+            android:layout_marginEnd="16sp"
             android:background="@drawable/signin_textbox"
             android:hint="@string/signup_passwordHint"
             android:inputType="textPassword"
+            android:padding="10dp"
             app:layout_constraintStart_toStartOf="@+id/textView7"
             app:layout_constraintTop_toBottomOf="@+id/textView7" />
 
@@ -107,46 +96,43 @@
             android:fontFamily="@font/mbc"
             android:gravity="center"
             android:text="@string/signin_loginText"
-            android:textSize="35sp"
+            android:textSize="30sp"
             app:layout_constraintEnd_toEndOf="parent"
-
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
-
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/signin_toSignup"
-        android:layout_width="412dp"
-        android:layout_height="64dp"
-        android:layout_margin="5dp"
-        android:layout_marginStart="12dp"
-        android:layout_marginBottom="48dp"
-        android:background="@drawable/signin_btn_pressed_selector"
-        android:fontFamily="@font/skybori"
-        android:text="@string/signin_toSignup"
-        android:textSize="40sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-
-        app:layout_constraintHorizontal_bias="0.495"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/signin_toMain"
-        android:layout_width="412dp"
-        android:layout_height="64dp"
-        android:layout_margin="5dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="112dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="16dp"
         android:background="@drawable/signin_btn_pressed_selector"
         android:fontFamily="@font/skybori"
         android:text="@string/signin_next"
-        android:textSize="45dp"
-        app:layout_constraintBottom_toTopOf="@+id/signin_toSignup"
+        android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/signin_loginbox"/>
+        app:layout_constraintTop_toBottomOf="@+id/signin_loginbox"
+        app:layout_goneMarginStart="16dp" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/signin_toSignup"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="16dp"
+        android:background="@drawable/signin_btn_pressed_selector"
+        android:fontFamily="@font/skybori"
+        android:text="@string/signin_toSignup"
+        android:textSize="30sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/signin_toMain"
+        app:layout_goneMarginStart="16dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
