--- a/ArkMaster/app/src/main/res/layout/activity_sign_up.xml
+++ b/ArkMaster/app/src/main/res/layout/activity_sign_up.xml
@@ -6,61 +6,53 @@
     android:layout_height="match_parent"
     tools:context=".SignUpActivity">
 
-
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-
-        android:src="@drawable/toptab"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="-17dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
-
     <TextView
-        android:layout_width="wrap_content"
+        android:id="@+id/tvTitle"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:background="#9C00FAC7"
+        android:gravity="center"
+        android:padding="10dp"
         android:text="@string/signup_toptap"
-        android:textSize="35sp"
-        android:layout_marginTop="10sp"
-        app:layout_constraintEnd_toEndOf="@+id/imageView2"
-        app:layout_constraintStart_toStartOf="@+id/imageView2"
+        android:textSize="30sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/signup_email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="104dp"
-        android:text="e-mail"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="32dp"
         android:fontFamily="@font/mbc"
-        android:textSize="20sp"
+        android:text="@string/user_email"
+        android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/tvTitle" />
 
     <EditText
         android:id="@+id/signup_emailbox"
-        android:layout_width="207dp"
-        android:layout_height="36dp"
-        android:layout_marginStart="30dp"
+        android:layout_width="0dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="10dp"
         android:background="@drawable/textbox"
-        android:gravity="center"
-        android:hint="@string/signup_emailHint"
-        android:layout_marginTop="5dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/signup_email"
         android:focusable="true"
         android:focusableInTouchMode="true"
-        android:inputType="text"/>
+        android:hint="@string/signup_emailHint"
+        android:inputType="text"
+        android:padding="5dp"
+        android:textSize="16sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/signup_email" />
 
     <Spinner
         android:id="@+id/signup_spinner"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="15dp"
+        android:layout_marginStart="16dp"
         app:layout_constraintBottom_toBottomOf="@+id/signup_emailbox"
         app:layout_constraintStart_toEndOf="@+id/signup_emailbox"
         app:layout_constraintTop_toTopOf="@+id/signup_emailbox" />
@@ -69,27 +61,30 @@
         android:id="@+id/signup_nickname"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
-        android:text="@string/signup_nickname"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
         android:fontFamily="@font/mbc"
-        android:textSize="20sp"
-        android:layout_marginTop="70dp"
+        android:text="@string/signup_nickname"
+        android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/signup_email" />
+        app:layout_constraintTop_toBottomOf="@+id/signup_emailbox" />
 
     <EditText
         android:id="@+id/signup_nicknameHint"
-        android:layout_width="207dp"
-        android:layout_height="36dp"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="16dp"
         android:background="@drawable/textbox"
-        android:gravity="center"
-        android:hint="@string/signup_nicnameHint"
-        android:layout_marginTop="5dp"
-        app:layout_constraintStart_toStartOf="@+id/signup_nickname"
-        app:layout_constraintTop_toBottomOf="@+id/signup_nickname"
         android:focusable="true"
         android:focusableInTouchMode="true"
-        android:inputType="text"/>
+        android:hint="@string/signup_nicnameHint"
+        android:inputType="text"
+        android:padding="5dp"
+        android:textSize="16sp"
+        app:layout_constraintStart_toStartOf="@+id/signup_nickname"
+        app:layout_constraintTop_toBottomOf="@+id/signup_nickname" />
 
     <TextView
         android:id="@+id/signup_erroremail"
@@ -98,10 +93,10 @@
         android:layout_marginStart="15dp"
         android:text="@string/signup_erroremail"
         android:textColor="@color/red"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/signup_email"
         app:layout_constraintStart_toEndOf="@+id/signup_email"
-        app:layout_constraintTop_toTopOf="@+id/signup_email"
-        android:visibility="invisible"/>
+        app:layout_constraintTop_toTopOf="@+id/signup_email" />
 
     <TextView
         android:id="@+id/Signup_errorNickname"
@@ -110,36 +105,39 @@
         android:layout_marginStart="15dp"
         android:text="@string/signup_errornickname"
         android:textColor="@color/red"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/signup_nickname"
         app:layout_constraintStart_toEndOf="@+id/signup_nickname"
-        app:layout_constraintTop_toTopOf="@+id/signup_nickname"
-        android:visibility="invisible"/>
+        app:layout_constraintTop_toTopOf="@+id/signup_nickname" />
 
     <TextView
         android:id="@+id/textView8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="70dp"
-        android:text="@string/signup_name"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
         android:fontFamily="@font/mbc"
-        android:textSize="20sp"
+        android:text="@string/signup_name"
+        android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/signup_nickname" />
+        app:layout_constraintTop_toBottomOf="@id/signup_nicknameHint" />
 
     <EditText
         android:id="@+id/signup_nameHint"
-        android:layout_width="207dp"
-        android:layout_height="36dp"
-        android:layout_marginTop="5dp"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="16dp"
         android:background="@drawable/textbox"
-        android:gravity="center"
-        android:hint="@string/signup_nameHint"
-        app:layout_constraintStart_toStartOf="@+id/textView8"
-        app:layout_constraintTop_toBottomOf="@+id/textView8"
         android:focusable="true"
         android:focusableInTouchMode="true"
-        android:inputType="text"/>
+        android:hint="@string/signup_nameHint"
+        android:inputType="text"
+        android:padding="5dp"
+        android:textSize="16sp"
+        app:layout_constraintStart_toStartOf="@+id/textView8"
+        app:layout_constraintTop_toBottomOf="@+id/textView8" />
 
     <TextView
         android:id="@+id/signup_EmptyName"
@@ -148,54 +146,58 @@
         android:layout_marginStart="15dp"
         android:text="@string/signup_errorname"
         android:textColor="@color/red"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/textView8"
         app:layout_constraintStart_toEndOf="@+id/textView8"
-        app:layout_constraintTop_toTopOf="@+id/textView8"
-        android:visibility="invisible"/>
+        app:layout_constraintTop_toTopOf="@+id/textView8" />
 
     <TextView
         android:id="@+id/textView10"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="70dp"
-        android:text="@string/signup_password"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
         android:fontFamily="@font/mbc"
-        android:textSize="20sp"
+        android:text="@string/signup_password"
+        android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView8" />
+        app:layout_constraintTop_toBottomOf="@+id/signup_nameHint" />
 
     <TextView
         android:id="@+id/signup_EmptyPw"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="15dp"
         android:text="@string/signup_errorpassword"
         android:textColor="@color/red"
-        android:layout_marginStart="15dp"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/textView10"
         app:layout_constraintStart_toEndOf="@+id/textView10"
-        app:layout_constraintTop_toTopOf="@+id/textView10"
-        android:visibility="invisible"/>
+        app:layout_constraintTop_toTopOf="@+id/textView10" />
 
     <EditText
         android:id="@+id/signup_passwordHint"
-        android:layout_width="207dp"
-        android:layout_height="36dp"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="16dp"
         android:background="@drawable/textbox"
-        android:layout_marginTop="5dp"
-        android:hint="@string/signup_passwordHint"
-        android:gravity="center"
-        app:layout_constraintStart_toStartOf="@+id/textView10"
-        app:layout_constraintTop_toBottomOf="@+id/textView10"
         android:focusableInTouchMode="true"
-        android:inputType="textPassword"/>
+        android:hint="@string/signup_passwordHint"
+        android:inputType="textPassword"
+        android:padding="5dp"
+        android:textSize="16sp"
+        app:layout_constraintStart_toStartOf="@+id/textView10"
+        app:layout_constraintTop_toBottomOf="@+id/textView10" />
 
     <TextView
+        android:id="@+id/tvPwdMessage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/signup_pwlimit"
-        android:layout_marginStart="35dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="5dp"
+        android:text="@string/signup_pwlimit"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/signup_passwordHint" />
 
@@ -203,40 +205,43 @@
         android:id="@+id/textView11"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="80dp"
-        android:text="@string/signup_checkpassword"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:focusable="true"
         android:fontFamily="@font/mbc"
-        android:textSize="20sp"
+        android:text="@string/signup_checkpassword"
+        android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView10"
-        android:focusable="true"/>
+        app:layout_constraintTop_toBottomOf="@+id/tvPwdMessage" />
 
     <TextView
         android:id="@+id/signup_errorPW"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="15dp"
         android:text="@string/signup_errorcheckpassword"
         android:textColor="@color/red"
-        android:layout_marginStart="15dp"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/textView11"
         app:layout_constraintStart_toEndOf="@+id/textView11"
-        app:layout_constraintTop_toTopOf="@+id/textView11"
-        android:visibility="invisible"/>
+        app:layout_constraintTop_toTopOf="@+id/textView11" />
 
     <EditText
         android:id="@+id/signup_checkPasswordHint"
-        android:layout_width="207dp"
-        android:layout_height="36dp"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="16dp"
         android:background="@drawable/textbox"
-        android:gravity="center"
-        android:hint="@string/signup_checkpasswordHint"
-        android:layout_marginTop="5dp"
-        app:layout_constraintStart_toStartOf="@+id/textView11"
-        app:layout_constraintTop_toBottomOf="@+id/textView11"
         android:focusable="true"
         android:focusableInTouchMode="true"
-        android:inputType="textPassword"/>
+        android:hint="@string/signup_checkpasswordHint"
+        android:inputType="textPassword"
+        android:padding="5dp"
+        android:textSize="16sp"
+        app:layout_constraintStart_toStartOf="@+id/textView11"
+        app:layout_constraintTop_toBottomOf="@+id/textView11" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/signup_button"
@@ -246,8 +251,8 @@
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="28dp"
         android:background="@drawable/selector_button"
-        android:foregroundGravity="center"
         android:clickable="true"
+        android:foregroundGravity="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -268,11 +273,10 @@
             android:id="@+id/textView3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="회원가입"
-            android:textColor="@color/white"
             android:fontFamily="@font/nexoncart"
-            android:textSize="20sp"
-            android:textStyle="bold"
+            android:text="@string/signup_buttonText"
+            android:textColor="@color/white"
+            android:textSize="26sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
