--- a/ArkMaster/app/src/main/res/drawable/btn_pressed_selector.xml
+++ b/ArkMaster/app/src/main/res/drawable/btn_pressed_selector.xml
@@ -3,14 +3,14 @@
 
     <item android:state_pressed="true">
         <shape android:shape="rectangle">
-            <solid android:color="@color/light_purple" />
-            <stroke android:width="2dp" android:color="@color/purple" />/>
+            <solid android:color="@color/light_gray" />
+            <stroke android:width="2dp" android:color="@color/black" />/>
         </shape>
     </item>
     <item android:state_pressed="false">
         <shape android:shape="rectangle">
             <solid android:color="#00FFFFFF" />
-            <stroke android:width="2dp" android:color="@color/purple" />/>
+            <stroke android:width="2dp" android:color="@color/black" />/>
         </shape>
     </item>
 
