--- a/ArkMaster/app/src/main/res/layout/activity_main.xml
+++ b/ArkMaster/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,16 @@
     android:layout_height="match_parent"
     tools:context=".main.MainActivity">
 
+    <Spinner
+        android:id="@+id/spLocale"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:gravity="end"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rcCharacter"
         android:layout_width="match_parent"
@@ -14,7 +24,7 @@
         app:layout_constraintBottom_toTopOf="@+id/btnMoveHome"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toBottomOf="@+id/spLocale" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btnMoveHome"
@@ -23,6 +33,7 @@
         android:layout_margin="5dp"
         android:layout_marginBottom="4dp"
         android:background="@drawable/btn_pressed_selector"
+        android:enabled="false"
         android:text="@string/button_home"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/btnMoveMyPage"
