--- a/ArkMaster/app/src/main/res/layout/my_page_comments_recycler_view_layout.xml
+++ b/ArkMaster/app/src/main/res/layout/my_page_comments_recycler_view_layout.xml
@@ -2,8 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="10dp"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:padding="10dp">
 
     <TextView
         android:id="@+id/my_comment_character_id"
@@ -11,7 +11,7 @@
         android:layout_height="0dp"
         android:layout_weight="1"
         android:text="TextView"
-        android:textSize="20sp"
+        android:textSize="16sp"
         android:textStyle="bold" />
 
     <LinearLayout
@@ -27,7 +27,7 @@
             android:ellipsize="end"
             android:maxLines="1"
             android:text="TextView"
-            android:textSize="18sp" />
+            android:textSize="14sp" />
 
         <TextView
             android:id="@+id/my_comment_date"
@@ -36,7 +36,7 @@
             android:layout_weight="1"
             android:gravity="end"
             android:text="TextView"
-            android:textSize="18sp"
+            android:textSize="14sp"
             android:textStyle="bold" />
 
     </LinearLayout>
