Update: RecyclerCharacterAdapter 댓글 출력

--- a/ArkMaster/app/src/main/res/layout/activity_my_page.xml
+++ b/ArkMaster/app/src/main/res/layout/activity_my_page.xml
@@ -31,16 +31,29 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/home_button" />
 
+    <TextView
+        android:id="@+id/tvTitle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:padding="10dp"
+        android:text="@string/my_page_kr"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/main_char_img"
         android:layout_width="130dp"
         android:layout_height="130dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="46dp"
+        android:layout_marginTop="16dp"
         android:background="#AFAFAF"
         android:src="@drawable/common"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tvTitle"
         app:shapeAppearanceOverlay="@style/RoundOverlay" />
 
     <TextView
@@ -50,7 +63,7 @@
         android:layout_marginStart="16dp"
         android:text="@string/user_name"
         android:textColor="@color/black"
-        android:textSize="20sp"
+        android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/textView2"
         app:layout_constraintStart_toEndOf="@+id/main_char_img"
@@ -63,7 +76,7 @@
         android:layout_marginStart="16dp"
         android:text="@string/user_email"
         android:textColor="@color/black"
-        android:textSize="20sp"
+        android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/main_char_img"
         app:layout_constraintStart_toEndOf="@+id/main_char_img"
